[package]
name = "deluge"
version = "0.1.0"
edition = "2018"
links = "deluge"

[features]
mock = ["dep:blake3", "dep:num"]

[dependencies]
libc = { version = "0.2" }
blake3 = { version = "1.3.3", optional = true }
num = { version = "0.1.36", optional = true }

[dev-dependencies]
async-std = { version = "1.9.0" }
