[package]
name = "deluge"
version = "0.1.0"
edition = "2018"

[features]
opencl = [ "dep:libc", "dep:libdeluge-sys" ]
native = [ "dep:blake3", "dep:num" ]

[dependencies]
libc = { version = "0.2", optional = true }
libdeluge-sys = { path = "../libdeluge-sys", version = "0.1.0", optional = true }
blake3 = { version = "1.3.3", optional = true }
num = { version = "0.1.36", optional = true }

[dev-dependencies]
async-std = { version = "1.9.0" }
